err/jiver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jiver'...
Compiling './lib/python3.5/site-packages/jiver/build_and_run.py'...
***   File "./lib/python3.5/site-packages/jiver/build_and_run.py", line 17
    print colored("+" * 120, 'yellow')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/core_checkout.py'...
***   File "./lib/python3.5/site-packages/jiver/core_checkout.py", line 14
    print colored("Couldn't find " + filename, 'red')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/database.py'...
***   File "./lib/python3.5/site-packages/jiver/database.py", line 23
    print colored("Running '" + cmd + "'", 'yellow')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/diffmerge.py'...
***   File "./lib/python3.5/site-packages/jiver/diffmerge.py", line 21
    print colored(directory + " is not a directory", 'red')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/main.py'...
***   File "./lib/python3.5/site-packages/jiver/main.py", line 195
    print colored("Running '" + cmd + "'", 'yellow')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/maven_utils.py'...
***   File "./lib/python3.5/site-packages/jiver/maven_utils.py", line 29
    print colored("Doesn't look like you're in a Jive project", 'red')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/move_theme_to_top_level.py'...
***   File "./lib/python3.5/site-packages/jiver/move_theme_to_top_level.py", line 94
    print colored('Themes directory not found in web project', 'red')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/overlay.py'...
***   File "./lib/python3.5/site-packages/jiver/overlay.py", line 23
    print colored("Creating " + directory, 'yellow')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/tabs.py'...
***   File "./lib/python3.5/site-packages/jiver/tabs.py", line 156
    print colored("Unable to correctly execute script. Please verify directory.", 'red')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/upgrade_project.py'...
***   File "./lib/python3.5/site-packages/jiver/upgrade_project.py", line 45
    print colored("Running the following command to obtain the Jive archetype:", 'yellow')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jiver/vpn.py'...
***   File "./lib/python3.5/site-packages/jiver/vpn.py", line 20
    print colored("Current default gateway: " + default_gateway, 'yellow')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
